# captest

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp
src/libcaptest/: CMakeLists.txt  captest.cpp  captest.h
